FIX: set overflow to auto to hide unnecessary scrollbars on store items

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -259,7 +259,7 @@ ul {
 
 .card-body {
     height: 10rem;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .card-btn {
